--- a/potfolio-cms/package.json
+++ b/potfolio-cms/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.11.1",
     "@strapi/plugin-users-permissions": "4.11.1",
+    "@strapi/provider-upload-cloudinary": "^4.11.5",
     "@strapi/strapi": "4.11.1",
     "mysql": "2.18.1",
     "pg": "^8.11.0"
